--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: python
 python: 3.5
-install: make -C miner install
-script: make -C miner test
+
+install:
+  - make -C miner install
+script:
+  - make -C miner test
+  - make -C miner coverage
+after_success:
+  - coveralls
