--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: python
 python: 3.5
 
+before_install: cd miner
 install:
-  - make -C miner install
+  - make install
 script:
-  - make -C miner test
-  - make -C miner coverage
+  - make test
+  - make coverage
 after_success:
-  - coveralls --base_dir miner
+  - coveralls
