. bitcoin and communication helpers

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "noImplicitAny": true,
+        "noImplicitReturns": true,
         "removeComments": true,
         "preserveConstEnums": true,
         "outDir": "release",
