--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,6 @@
     "merge2": "^1.0.1"
   },
   "dependencies": {
-    "bitcoin-core": "^1.0.0",
-    "es6-promise": "^3.1.2"
+    "bitcoin-core": "^1.0.0"
   }
 }
