+ pull socket + submit block

--- a/bitcoin-config/bitcoin3.conf
+++ b/bitcoin-config/bitcoin3.conf
@@ -6,6 +6,9 @@ datadir=./data3
 port=18333
 daemon=1
 rpcport=16593
+server=1
+rpcuser=username
+rpcpassword=password
  # Cory connects to nobody
 addnode=localhost:18444
 
